[package]
name = "zebra"
version = "0.1.0"
authors = ["Matteo Monti <matteo.monti@epfl.ch>", "Manuel Vidigueira <manuel.ribeirovidigueira@epfl.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 2

[dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop", branch = "carbon" }
tokio = { version = "1", features = [ "rt" ] }
serde = { version = "~1.0", features = [ "derive", "rc" ] }
async-recursion = { version = "0.3.2" }
oh-snap = { version = "0.0.2" }
snafu = { version = "~0.6" }
rayon = { version = "1.5.1" }

[dev-dependencies]
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
ptree = { version = "0.3.2" }
rand = { version = "0.8.4" }
array-init = {version = "2.0.0"}
bincode = { version = "1" }