[package]
name = "zebra"
version = "0.1.0"
authors = ["Matteo Monti <matteo.monti@epfl.ch>", "Manuel Vidigueira <manuel.ribeirovidigueira@epfl.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 2

[dependencies]
talk = { git = "https://github.com/Distributed-EPFL/talk" }
serde = { version = "~1.0", features = [ "derive", "rc" ] }
oh-snap = { version = "0.0.2" }
doomstack = { git = "https://github.com/Distributed-EPFL/doomstack" }
rayon = { version = "1.5.1" }
bit-vec = { version = "0.6", features = ["serde"] }

[dev-dependencies]
ptree = { version = "0.3.2" }
rand = { version = "0.8.4" }
array-init = {version = "2.0.0"}
bincode = { version = "1" }
